--- a/layers/earth.yaml
+++ b/layers/earth.yaml
@@ -15,7 +15,18 @@ layers:
             draw:
                 polygons:
                     style: polygons
-                    color: [[7,[0.242,0.332,0.456]],[8,[0.213,0.302,0.433]]]
+                    color: [[7,[0.242,0.332,0.456]],[8,[0.121,0.173,0.247]]]
+
+    landuse-urban-area-early:
+        data: { source: mapzen, layer: landuse }
+        filter:
+            kind: ['urban area']
+            $zoom: { max: 6 }
+        draw:
+            polygons:
+                style: urban-early
+                order: global.order
+                color: [[4,[0.031,0.973,1.000]],[6,[0.139,0.198,0.283]]]
 
 styles:
     earth-early:
@@ -31,4 +42,19 @@ styles:
 
                 STRIPES_ALPHA: 1.
                 STRIPES_SCALE: 25.
+                STRIPES_WIDTH: zoom()
+
+    urban-early:
+        base: polygons
+        mix: [functions-zoom, polygons-diagonal-stripes]
+        shaders:
+            defines:
+                ZOOM_START: 3.
+                ZOOM_END: 7
+                ZOOM_MAX: 7.
+                ZOOM_IN: 0.9
+                ZOOM_OUT: -.2
+
+                STRIPES_ALPHA: 1.0
+                STRIPES_SCALE: 50.
                 STRIPES_WIDTH: zoom()
