--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -404,6 +404,11 @@ layers:
                 draw:
                     lines:
                         color: [0.630,0.120,0.273]
+            in-pedestrian:
+                filter: { landuse_kind: pedestrian }
+                draw:
+                    lines:
+                        color: [0.141,0.886,0.231]
 
         airport-lines:
             filter: { kind: minor_road, aeroway: [runway,taxiway] }
