--- a/tron.yaml
+++ b/tron.yaml
@@ -1,6 +1,6 @@
 import:
     # Global variables
-    - global.yaml
+    # - global.yaml
     # Styles
     - styles/lines.yaml
     - styles/polygons.yaml
@@ -13,6 +13,7 @@ import:
     - layers/landuse.yaml
     - layers/boundaries.yaml
     - layers/places.yaml
+    - layers/telecom.yaml
 
 # Sources
 sources:
@@ -45,6 +46,36 @@ fonts:
     Ubuntu:
         url: https://fonts.gstatic.com/s/ubuntu/v9/vRvZYZlUaogOuHbBTT1SNevvDin1pK8aKteLpeZ5c0A.woff
 
+global:
+    animated: true
+    order_add_9: function () { return (feature.sort_key * 20 + 9); }
+    order_add_8: function () { return (feature.sort_key * 20 + 8); }
+    order_add_7: function () { return (feature.sort_key * 20 + 7); }
+    order_add_6: function () { return (feature.sort_key * 20 + 6); }
+    order_add_5: function () { return (feature.sort_key * 20 + 5); }
+    order_add_4: function () { return (feature.sort_key * 20 + 4); }
+    order_add_3: function () { return (feature.sort_key * 20 + 3); }
+    order_add_2: function () { return (feature.sort_key * 20 + 2); }
+    order_add_1: function () { return (feature.sort_key * 20 + 1); }
+    order: function () { return (feature.sort_key * 20); }
+    order_sub_1: function () { return (feature.sort_key * 20 - 1); }
+    order_sub_2: function () { return (feature.sort_key * 20 - 2); }
+    order_sub_3: function () { return (feature.sort_key * 20 - 3); }
+    order_sub_4: function () { return (feature.sort_key * 20 - 4); }
+    order_sub_5: function () { return (feature.sort_key * 20 - 5); }
+    order_sub_6: function () { return (feature.sort_key * 20 - 6); }
+    order_sub_7: function () { return (feature.sort_key * 20 - 7); }
+    order_sub_8: function () { return (feature.sort_key * 20 - 8); }
+    order_sub_9: function () { return (feature.sort_key * 20 - 9); }
+    pseudoRandomColor: |
+        function() {
+            return [
+                0.7 * (parseInt(feature.id, 16) / 100 % 1),     // jshint ignore:line
+                0.7 * (parseInt(feature.id, 16) / 10000 % 1),   // jshint ignore:line
+                0.7 * (parseInt(feature.id, 16) / 1000000 % 1), // jshint ignore:line
+                1
+            ];
+        }
 
 # Scene
 scene:
